--- a/ShadowsocksPac/ShadowsocksPac.csproj
+++ b/ShadowsocksPac/ShadowsocksPac.csproj
@@ -8,7 +8,7 @@
         <OutputType>WinExe</OutputType>
         <RootNamespace>ShadowsocksPac</RootNamespace>
         <AssemblyName>ShadowsocksPac</AssemblyName>
-        <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <Deterministic>true</Deterministic>
@@ -33,6 +33,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Masuit.Tools, Version=2.4.5.5, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\Masuit.Tools.Net.2.6.2\lib\net461\Masuit.Tools.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Xml.Linq" />
@@ -66,6 +69,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
